[#10176] Instructor home page UI fixes (#10200)
* add button separation & non break

* add table header

* set course table overflow auto and dropdown not clipped

* improved input fields' lengths to be consistent

--- a/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-courses-page/instructor-courses-page.component.scss
@@ -61,5 +61,9 @@
 }
 
 .table-responsive {
-  overflow: visible;
+  overflow: auto;
+}
+
+.d-inline-block {
+  position: inherit;
 }
